--- a/package.json
+++ b/package.json
@@ -5,17 +5,21 @@
   "main": "index.js",
   "scripts": {
     "build": "tsc",
-    "start": "node ./dist/server.js",
-    "dev": " concurrently \"nodemon ./dist/server.js\" \"tsc --watch\""
+    "start": "node ./backend/dist/server.js",
+    "dev": " concurrently \"nodemon ./backend/dist/server.js\" \"tsc --watch\" \"npm run --prefix frontend dev\""
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "@types/express": "^4.17.13",
-    "concurrently": "^7.4.0",
     "dotenv": "^16.0.2",
-    "express": "^4.18.1",
+    "express": "^4.18.1"
+  },
+  "devDependencies": {
+    "@types/express": "^4.17.13",
+    "@types/node": "^18.7.16",
+    "colors": "^1.4.0",
+    "concurrently": "^7.4.0",
     "nodemon": "^2.0.19",
     "typescript": "^4.8.3"
   }
