--- a/frontend/package.json
+++ b/frontend/package.json
@@ -6,6 +6,7 @@
     "dev": "next dev",
     "build": "next build",
     "export": "next export",
+    "serve": "next build && next export",
     "start": "next start",
     "lint": "next lint"
   },
