--- a/package.json
+++ b/package.json
@@ -5,15 +5,20 @@
   "main": "index.js",
   "scripts": {
     "build": "tsc",
-    "start": "node ./backend/dist/server.js",
-    "dev": " concurrently \"nodemon ./backend/dist/server.js\" \"tsc --watch\" \"npm run --prefix frontend dev\""
+    "start": "node ./backend/dist/index.js",
+    "dev": " concurrently \"nodemon ./backend/dist/index.js\" \"tsc --watch\" \"npm run --prefix frontend dev\""
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "bcrypt": "^5.0.1",
+    "cors": "^2.8.5",
     "dotenv": "^16.0.2",
-    "express": "^4.18.1"
+    "express": "^4.18.1",
+    "express-async-handler": "^1.2.0",
+    "jsonwebtoken": "^8.5.1",
+    "mongoose": "^6.6.0"
   },
   "devDependencies": {
     "@types/express": "^4.17.13",
