--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,9 +11,17 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@reduxjs/toolkit": "^1.8.5",
+    "axios": "^0.27.2",
+    "bootstrap": "^5.2.1",
     "next": "12.3.0",
     "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react-bootstrap": "^2.5.0",
+    "react-dom": "18.2.0",
+    "react-icons": "^4.4.0",
+    "react-redux": "^8.0.2",
+    "react-toastify": "^9.0.8",
+    "styled-components": "^5.3.5"
   },
   "devDependencies": {
     "@types/node": "18.7.16",
