--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "express": "^4.18.1",
     "express-async-handler": "^1.2.0",
     "jsonwebtoken": "^8.5.1",
-    "mongoose": "^6.6.0"
+    "mongoose": "^6.6.0",
+    "react-icons": "^4.4.0"
   },
   "devDependencies": {
     "@types/express": "^4.17.13",
